src/objects/fc_csc__Split_Payment__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Split Payments</relationshipLabel>
        <relationshipName>Split_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount_Applied_to_Invoices__c</fullName>
        <label>Amount Applied to Invoices</label>
        <summarizedField>fc_csc__Split_Payment_Invoice__c.fc_csc__Payment_Applied__c</summarizedField>
        <summaryForeignKey>fc_csc__Split_Payment_Invoice__c.fc_csc__Split_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount_to_Credit_Balance__c</fullName>
        <formula>fc_csc__Amount__c - fc_csc__Amount_Applied_to_Invoices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount to Credit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Split Payments</relationshipLabel>
        <relationshipName>Split_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Error_Text__c</fullName>
        <label>Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Is_New__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fc_csc__New_Payment_Number__c</fullName>
        <label>New Payment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__New_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>This Payment Was Created By This Split Payment</relationshipLabel>
        <relationshipName>Split_Payments_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Original_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Split Payments Created From This Payment</relationshipLabel>
        <relationshipName>Split_Payments_Original</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Source__c</fullName>
        <formula>IF(ISBLANK(fc_csc__Original_Payment__c),&quot;Unidentified Payment&quot;, &quot;Zuora Payment&quot;)</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Unidentified_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidentified Payment</label>
        <referenceTo>fc_csc__Unidentified_Payment__c</referenceTo>
        <relationshipLabel>Split Payments</relationshipLabel>
        <relationshipName>Split_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Split Payment</label>
    <nameField>
        <displayFormat>SP-{0000000}</displayFormat>
        <label>Split Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>